# obs-studio

cmake/windows/: architecture.cmake  helpers.cmake
plugins/win-capture/: game-capture-file-init.c  game-capture.c  load-graphics-offsets.c  plugin-main.c
plugins/win-capture/get-graphics-offsets/: CMakeLists.txt
plugins/win-capture/graphics-hook/: CMakeLists.txt  obs-vulkanarm64.json
plugins/win-capture/inject-helper/: CMakeLists.txt
plugins/win-dshow/virtualcam-module/: CMakeLists.txt
plugins/win-mf/: CMakeLists.txt  mf-av1-encoder.cpp  mf-av1-encoder.hpp  mf-av1.cpp  mf-common.cpp  mf-encoder-descriptor.cpp  mf-encoder-descriptor.hpp  mf-h264-encoder.cpp  mf-h264.cpp  mf-hevc-encoder.cpp  mf-hevc-encoder.hpp  mf-hevc.cpp  mf-plugin.cpp
plugins/win-mf/data/locale/: en-US.ini
